# veloxbpe

./: .gitignore  Cargo.toml  README.md  pyproject.toml
bench/: benchmark_bandwidth_0.py
data/: sample0.txt
fuzz/: encode0.py
src/: base64.rs  bpe.rs  bytepair.rs  lib.rs  smallstring.rs  tokenizer.rs  vocab.rs  vocab_loader.rs
src/py/: mod.rs
