[package]
name = "veloxbpe"
version = "0.1.0"
edition = "2021"

[lib]
name = "veloxbpe"
path = "src/lib.rs"
crate-type = ["cdylib"]


[dependencies]
anyhow = "1.0.95"
reqwest = { version = "0.11", features = ["blocking", "json", "gzip", "cookies"] }
bincode = "=1.3.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rayon = "1.10.0"
pyo3 = { version = "=0.22.6", features = ["extension-module"] }
