[build-system]
requires = ["maturin>=1,<2"]
build-backend = "maturin"


[tool.maturin]
features = ["pyo3/extension-module"]

[project]
name = "veloxbpe"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "maturin>=1.8.2",
]
