[build-system]
requires = ["maturin>=1,<2"]
build-backend = "maturin"


[tool.maturin]
features = ["pyo3/extension-module"]

[tool.uv]
cache-keys = [{file = "pyproject.toml"}, {file = "Cargo.toml"}, {file = "**/*.rs"}]

[project]
name = "veloxbpe"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "matplotlib>=3.9.4",
    "maturin>=1.8.2",
    "tiktoken>=0.9.0",
]
